--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "automobile-debt-crm",
-  "version": "0.0.1",
+  "name": "auto-repair-crm",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,26 +17,54 @@
     "@mui/system": "^7.2.0",
     "@mui/x-data-grid": "^8.9.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.0",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "html2canvas": "^1.4.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.534.0",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-gauge-chart": "^0.5.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "react-pdf": "^7.6.0",
+    "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.30.1",
+    "react-select": "^5.8.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-spring": "^10.0.1"
+    "react-spring": "^10.0.1",
+    "react-to-print": "^2.14.15",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.2.2",
