--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "html2canvas": "^1.4.1",
@@ -29,6 +30,7 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.534.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
     "react": "^18.2.0",
@@ -50,6 +52,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-spring": "^10.0.1",
     "react-to-print": "^2.14.15",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
