--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.2",
+    "imagemin": "^9.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
