--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
+    "detect-libc": "^2.0.4",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
@@ -54,6 +55,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-spring": "^10.0.1",
     "react-to-print": "^2.14.15",
+    "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.4"
   },
