--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/system": "^7.2.0",
     "@mui/x-data-grid": "^8.9.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "archiver": "^7.0.1",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.0",
@@ -35,6 +36,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.10.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
