--- a/package.json
+++ b/package.json
@@ -59,12 +59,17 @@
     "react-to-print": "^2.14.15",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "twilio": "^5.8.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
@@ -73,11 +78,15 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.2",
+    "identity-obj-proxy": "^3.0.0",
     "imagemin": "^9.0.1",
     "imagemin-mozjpeg": "^10.0.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.2.2",
     "vite": "^4.5.14"
   }
