--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "preview": "vite preview",
     "server": "node server/index.js",
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
-    "setup-db": "node scripts/setup-database.js"
+    "setup-db": "node scripts/setup-database.js",
+    "test": "jest",
+    "test:server": "jest --config server/jest.config.js",
+    "test:client": "jest --config jest.config.js",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:server:coverage": "jest --config server/jest.config.js --coverage",
+    "test:all": "npm run test:server && npm run test:client"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -75,6 +82,7 @@
     "@types/nodemailer": "^6.4.18",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.2",
@@ -83,8 +91,10 @@
     "imagemin-mozjpeg": "^10.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "mongodb-memory-server": "^9.1.3",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.24",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.4.1",
     "typescript": "^5.2.2",
