--- a/package.json
+++ b/package.json
@@ -37,9 +37,6 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "winston": "^3.11.0",
-    "morgan": "^1.10.0",
-    "node-cache": "^5.1.2",
     "html2canvas": "^1.4.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -47,9 +44,12 @@
     "lucide-react": "^0.534.0",
     "moment": "^2.30.1",
     "mongoose": "^8.17.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.10.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^6.0.0",
@@ -72,7 +72,9 @@
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.4",
-    "twilio": "^5.8.0"
+    "speakeasy": "^2.0.0",
+    "twilio": "^5.8.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.7.0",
