Add appointment communication service and enhance booking workflow - Add appointmentCommunicationService.js for automated communication - Add EnhancedAppointmentModal.tsx component - Update appointment and customer routes - Add test files for appointment service and booking workflow - Update email service and cron service - Add favicon generation script - Update package dependencies

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mui/system": "^7.2.0",
     "@mui/x-data-grid": "^8.9.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@sendgrid/mail": "^8.1.5",
     "archiver": "^7.0.1",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
