--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/x-data-grid": "^8.9.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@sendgrid/mail": "^8.1.5",
+    "@stripe/react-stripe-js": "^3.9.2",
     "archiver": "^7.0.1",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
