--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.4",
     "speakeasy": "^2.0.0",
+    "stripe": "^18.5.0",
     "twilio": "^5.8.0",
     "winston": "^3.11.0"
   },
